# leg_VUE

./: .gitignore  AZURE_AUTOMATION_GUIDE.md  AZURE_MANAGED_IDENTITY_SETUP.md  AZURE_PRODUCTION_UPDATES.md  CLAUDE.md  CLEANUP_SUMMARY.md  Claud.md  EXECUTIVE_ORDER_AI_FLOW.md  FIXES_SUMMARY.md  FIX_EXECUTIVE_ORDERS.md  NIGHTLY_PROCESSOR_SETUP.md  PoliticalVue.code-workspace  README.md  STATE_BILLS_AI_FLOW.md  SUPABASE_MIGRATION.md  add-managed-identities.ps1  add-managed-identity-access.sql  azure-pipelines.yml  azure-scheduler-jobs.bicep  backend_logs.txt  bill_processor.py  cleanup_test_users.py  containerapp.yaml  cors-test.html  create-jobs.sh  debug_final_analysis.py  debug_texas_dates.py  debug_texas_legiscan.py  deploy-scheduler-jobs.sh  direct_cleanup.py  docker-compose.yml  fix_azure_firewall.sh  fix_job_schedules.sh  fix_session_logic.py  init_git.sh  legiscan_explorer.py  process_remaining_texas.py  project_scaffold.sh  recreate-jobs.sh  sync_texas_2nd_session.py  (+3 more)
backend/:  executive_orders_pipeline.py  BILL_UPDATE_SYSTEM.md  Dockerfile  ENHANCED_FETCH_IMPLEMENTATION.md  FILE_UPLOAD_GUIDE.md  TEXAS_FETCH_FIX_SUMMARY.md  add_new_bill_tracking.sql  add_new_order_tracking.sql  ai.py  ai_status.py  azure_login.sh  azure_update_categories.py  batch_html_cleanup.py  bill_status_analysis.py  bulk_load_bills.py  ca_auto_restart.py  ca_continuous_runner.sh  ca_monitor_and_run.py  ca_resilient_processor.py  ca_robust_processor.py  ca_safe_processor.py  check_ai_summary_status.py  check_ca_status.py  check_co_progress.py  check_ky_status.py  check_recent_eos.py  config.py  (+114 more)
(+44273 files in other folders)
